--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: cradio_left
-  - board: nice_nano_v2
-    shield: cradio_right
+  - board: seeeduino_xiao_ble
+    shield: iris_left
+  - board: seeeduino_xiao_ble
+    shield: iris_right
