--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: iris_left
+    shield: desynchronized_left
   - board: seeeduino_xiao_ble
-    shield: iris_right
+    shield: desynchronized_right
