--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -69,8 +69,8 @@ RC(3,5) RC(3,4) RC(3,3) RC(3,2) RC(3,1) RC(3,0)                 RC(3,6) RC(3,7) 
         left_encoder: encoder_left {
             compatible = "alps,ec11";
             label = "LEFT_ENCODER";
-            a-gpios = <5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-            b-gpios = <6 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+            a-gpios = <&xiao_d 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+            b-gpios = <&xiao_d 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
             resolution = <4>;
         };
 
