--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -18,6 +18,7 @@
 };
 
 &xiao_serial { status = "disabled"; };
+&xiao_i2c { status = "disabled"; };
 
 / {
     chosen {
@@ -67,7 +68,7 @@ RC(3,5) RC(3,4) RC(3,3) RC(3,2) RC(3,1) RC(3,0)                 RC(3,7) RC(3,8) 
         label = "LEFT_ENCODER";
         a-gpios = <&xiao_d 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&xiao_d 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        resolution = <32>;
+        resolution = <4>;
     };
 
     sensors {
