--- a/config/boards/shields/desynchronized/desynchronized_right.conf
+++ b/config/boards/shields/desynchronized/desynchronized_right.conf
@@ -21,3 +21,8 @@ CONFIG_ZMK_KEYBOARD_NAME="desynchronized"
 # Uncomment to enable encoder
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Uncomment to enable mouse
+CONFIG_ZMK_MOUSE=y
+CONFIG_PMW3360=y
+CONFIG_SPI=y
