--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,4 +2,4 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: josishmail/zmk/.github/workflows/build-user-config.yml@support-trackball
+    uses: josishmail/zmk/blob/support-trackball/.github/workflows/build-user-config.yml@support-trackball
