--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,6 @@
-name: Reusable user config build
+on: [push, pull_request, workflow_dispatch]
 
-on:
-  workflow_call:
-    inputs:
-      build_matrix_path:
-        description: "Path to the build matrix file"
-        default: "build.yaml"
-        required: false
-        type: string
-      config_path:
-        description: "Path to the config directory"
-        default: "config"
-        required: false
-        type: string
-      fallback_binary:
-        description: "Fallback binary format, if no *.uf2 file was built"
-        default: "bin"
-        required: false
-        type: string
-      artifact_name:
-        description: 'Artifact output file name'
-        default: 'firmware'
-        required: false
-        type: string
+name: Build
 
 jobs:
   matrix:
@@ -33,34 +11,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+      - if: ${{ env.ACT }}
+        name: Prepare python
+        run: |
+          python3 -m pip install --upgrade pip setuptools wheel
+          python3 -m pip install --ignore-installed PyYAML
       - name: Install yaml2json
         run: python3 -m pip install remarshal
-
-      - name: Fetch Build Matrix
-        id: set-matrix
+      - id: set-matrix
+        name: Fetch Build Matrix
         run: |
-          set -x
-          matrix=$(yaml2json ${{ inputs.build_matrix_path }} | jq -c .)
-          yaml2json ${{ inputs.build_matrix_path }}
+          matrix=$(yaml2json build.yaml | jq -c .)
+          yaml2json build.yaml
           echo "::set-output name=matrix::${matrix}"
-
   build:
     runs-on: ubuntu-latest
     container:
-      image: zmkfirmware/zmk-build-arm:stable
+      image: zmkfirmware/zmk-build-arm:2.5
     needs: matrix
     name: Build
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
     steps:
+      - if: ${{ env.ACT }}
+        name: Install node
+        run: |
+          apt update
+          apt install -y nodejs
       - name: Prepare variables
         id: variables
         run: |
-          set -x
-          if [ -n "${{ matrix.shield }}" ]
-          then
+          if [ -n "${{ matrix.shield }}" ]; then
             EXTRA_CMAKE_ARGS="-DSHIELD=${{ matrix.shield }}"
             ARTIFACT_NAME="${{ matrix.shield }}-${{ matrix.board }}-zmk"
             DISPLAY_NAME="${{ matrix.shield }} - ${{ matrix.board }}"
@@ -72,16 +54,12 @@ jobs:
           echo ::set-output name=extra-cmake-args::${EXTRA_CMAKE_ARGS}
           echo ::set-output name=artifact-name::${ARTIFACT_NAME}
           echo ::set-output name=display-name::${DISPLAY_NAME}
-          echo ::set-output name=zephyr-version::${ZEPHYR_VERSION}
-
       - name: Checkout
         uses: actions/checkout@v2
-
       - name: Cache west modules
-        uses: actions/cache@v3.0.2
-        continue-on-error: true
+        uses: actions/cache@v2
         env:
-          cache-name: cache-zephyr-${{ steps.variables.outputs.zephyr-version }}-modules
+          cache-name: cache-zephyr-modules
         with:
           path: |
             modules/
@@ -89,43 +67,39 @@ jobs:
             zephyr/
             bootloader/
             zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/west.yml', '**/build.yaml') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: West Init
-        run: west init -l ${{ inputs.config_path }}
-
+        run: west init -l config
       - name: West Update
         run: west update
-
       - name: West Zephyr export
         run: west zephyr-export
-
       - name: West Build (${{ steps.variables.outputs.display-name }})
         run: |
-          set -x
-          west build -s zmk/app -b ${{ matrix.board }} -- -DZMK_CONFIG=${GITHUB_WORKSPACE}/${{ inputs.config_path }} ${{ steps.variables.outputs.extra-cmake-args }} ${{ matrix.cmake-args }}
-
+          west build -s zmk/app -b ${{ matrix.board }} -- -DZMK_CONFIG=${GITHUB_WORKSPACE}/config ${{ steps.variables.outputs.extra-cmake-args }} ${{ matrix.cmake-args }}
+      - name: ${{ steps.variables.outputs.display-name }} DTS File
+        if: ${{ always() }}
+        run: |
+          if [ -f "build/zephyr/${{ matrix.board }}.dts.pre.tmp" ]; then cat -n build/zephyr/${{ matrix.board }}.dts.pre.tmp; fi
+          if [ -f "build/zephyr/zephyr.dts" ]; then cat -n build/zephyr/zephyr.dts; fi
       - name: ${{ steps.variables.outputs.display-name }} Kconfig file
-        run: grep -v -e "^#" -e "^$" build/zephyr/.config | sort
-
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename artifacts
         run: |
-          set -x
           mkdir build/artifacts
           if [ -f build/zephyr/zmk.uf2 ]
           then
             cp build/zephyr/zmk.uf2 "build/artifacts/${{ steps.variables.outputs.artifact-name }}.uf2"
-          elif [ -f build/zephyr/zmk.${{ inputs.fallback_binary }} ]
+          elif [ -f build/zephyr/zmk.hex ]
           then
-            cp build/zephyr/zmk.${{ inputs.fallback_binary }} "build/artifacts/${{ steps.variables.outputs.artifact-name }}.${{ inputs.fallback_binary }}"
+            cp build/zephyr/zmk.hex "build/artifacts/${{ steps.variables.outputs.artifact-name }}.hex"
           fi
-
       - name: Archive (${{ steps.variables.outputs.display-name }})
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ inputs.artifact_name }}
+          name: firmware
           path: build/artifacts
