--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -2,7 +2,7 @@
 
 &xiao_spi {
     status = "okay";
-    cs-gpios = <&xiao_d 6 GPIO_ACTIVE_LOW, &xiao_d 7 GPIO_ACTIVE_LOW>;
+    cs-gpios = <&xiao_d 6 GPIO_ACTIVE_LOW>, <&xiao_d 7 GPIO_ACTIVE_LOW>;
 
     shift_reg: 595@0 {
         compatible = "zmk,gpio-595";
