put mouse on left

--- a/config/boards/shields/desynchronized/desynchronized_right.conf
+++ b/config/boards/shields/desynchronized/desynchronized_right.conf
@@ -23,6 +23,6 @@ CONFIG_ZMK_KEYBOARD_NAME="desynchronized"
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment to enable mouse
-CONFIG_ZMK_MOUSE=y
-CONFIG_PMW3360=y
-CONFIG_SPI=y
+# CONFIG_ZMK_MOUSE=y
+# CONFIG_PMW3360=y
+# CONFIG_SPI=y
