--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -15,13 +15,23 @@
         ngpios = <8>;
     };
 
+//    trackball: trackball@0 {
+//        compatible = "pixart,pmw3360";
+//        reg = <1>;
+//        label = "Pixart PMW3360";
+//        irq-gpios = <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+//        spi-max-frequency = <2000000>;
+//        scroll-layer = <0>;
+//    };
+
     trackball: trackball@0 {
-        compatible = "pixart,pmw3360";
+        compatible = "pixart,pmw33xx";
         reg = <1>;
         label = "Pixart PMW3360";
-        irq-gpios = <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        cs-gpios = <&xiao_d 7 GPIO_ACTIVE_LOW>;
+        motswk-gpios = <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
         spi-max-frequency = <2000000>;
-        scroll-layer = <0>;
+        cpi = <400>;
     };
 
 };
