--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -36,8 +36,8 @@
 
 };
 
-&xiao_serial { status = "disabled"; };
-&xiao_i2c { status = "disabled"; };
+//&xiao_serial { status = "disabled"; };
+//&xiao_i2c { status = "disabled"; };
 
 / {
     chosen {
