--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -19,8 +19,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_KEYBOARD_NAME="desynchronized"
 
 # Uncomment to enable encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# CONFIG_EC11=y
+# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment to enable mouse
 CONFIG_ZMK_MOUSE=y
