--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -27,5 +27,8 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3360=y
 CONFIG_SPI=y
 
+CONFIG_MOUSE_LAYER_INDEX=0
+CONFIG_SCROLL_LAYER_INDEX=1
+
 #Logging
 # CONFIG_ZMK_USB_LOGGING=y
