--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -10,8 +10,7 @@ CONFIG_ZMK_SLEEP=y
 # 1.800.000 ms = 30 minutes
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
-# "Eager Debouncing"
-# Trying to lower the input lag.
+# "Eager Debouncing" Lowers input lag but can increase noise
 # CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
@@ -22,7 +21,41 @@ CONFIG_ZMK_KEYBOARD_NAME="desynchronized"
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Uncomment to enable mouse
-CONFIG_ZMK_MOUSE=y
-CONFIG_PMW3360=y
+# Do I need this?
 CONFIG_SPI=y
+
+
+##### Point Devices ####
+# CONFIG_ZMK_PD_WORK_QUEUE_DEDICATED=n
+CONFIG_ZMK_PD_DEDICATED_WORK_QUEUE_PRIORITY=2
+CONFIG_ZMK_TRACKBALL_POLL_DURATION=8
+
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_MOUSE_TICK_DURATION=10
+CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=1
+
+CONFIG_PMW3610=y
+CONFIG_PMW3610_CPI=2000
+CONFIG_PMW3610_CPI_DIVIDOR=1
+CONFIG_PMW3610_ORIENTATION_90=y
+CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=100
+CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=200
+CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=250
+CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=500
+CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
+CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
+
+### Bluetooth ###
+# CONFIG_BT_PERIPHERAL_PREF_MAX_INT=9
+# CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
+# CONFIG_BT_BUF_ACL_TX_COUNT=32
+# CONFIG_BT_L2CAP_TX_BUF_COUNT=32
+
+# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=10
+
+### logging
+# CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_LOG_LEVEL_INF=y
+# CONFIG_BATTERY_LOG_LEVEL_DBG=y
+# CONFIG_PMW3610_LOG_LEVEL_INF=y
