--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -20,6 +20,7 @@
         reg = <1>;
         label = "Pixart PMW3360";
         spi-max-frequency = <2000000>;
+        irq-gpios = <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
         scroll-layer = <1>;
     };
 
