--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -59,3 +59,10 @@ CONFIG_ZMK_USB_LOGGING=y
 CONFIG_ZMK_LOG_LEVEL_INF=y
 CONFIG_BATTERY_LOG_LEVEL_DBG=y
 CONFIG_PMW3610_LOG_LEVEL_INF=y
+
+CONFIG_CONSOLE=y
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_INTERRUPT_DRIVEN=n
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
