--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -75,3 +75,4 @@ CONFIG_SOC_ATMEL_SAMD_XOSC32K_AS_MAIN=y
 CONFIG_BOOTLOADER_BOSSA=y
 CONFIG_BOOTLOADER_BOSSA_ADAFRUIT_UF2=y
 CONFIG_BUILD_OUTPUT_UF2=y
+BOARD_ENABLE_DCDC=y
