--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -26,23 +26,13 @@
 
 };
 
-&xiao_serial {
-    status = "disabled";
-    current-speed = <115200>;
-};
-
-&usbd {
-    status = "okay";
-};
-
+&xiao_serial { status = "okay"; };
 &xiao_i2c { status = "disabled"; };
 
 / {
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
-        /delete-property/ zephyr,console;
-        /delete-property/ zephyr,shell-uart;
     };
 
     default_transform: keymap_transform_0 {
