--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -55,14 +55,14 @@ CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
 # CONFIG_ZMK_BATTERY_REPORT_INTERVAL=10
 
 ### logging
-# CONFIG_ZMK_USB_LOGGING=y
-# CONFIG_ZMK_LOG_LEVEL_INF=y
-# CONFIG_BATTERY_LOG_LEVEL_DBG=y
-# CONFIG_PMW3610_LOG_LEVEL_INF=y
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_LOG_LEVEL_INF=y
+CONFIG_BATTERY_LOG_LEVEL_DBG=y
+CONFIG_PMW3610_LOG_LEVEL_INF=y
 
-# CONFIG_CONSOLE=y
-# CONFIG_SERIAL=y
-# CONFIG_UART_CONSOLE=y
-# CONFIG_UART_INTERRUPT_DRIVEN=y
-# CONFIG_ZMK_USB=y
-# CONFIG_ZMK_BLE=y
+CONFIG_CONSOLE=y
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
