--- a/config/boards/shields/desynchronized/desynchronized.dtsi
+++ b/config/boards/shields/desynchronized/desynchronized.dtsi
@@ -21,12 +21,12 @@
         label = "Pixart PMW3360";
         spi-max-frequency = <2000000>;
         irq-gpios = <&xiao_d 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-        scroll-layer = <0>;
+        scroll-layer = <1>;
     };
 
 };
 
-&xiao_serial { status = "okay"; };
+&xiao_serial { status = "disabled"; };
 &xiao_i2c { status = "disabled"; };
 
 / {
