wrong sensor dummy

--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -35,16 +35,16 @@ CONFIG_ZMK_MOUSE_TICK_DURATION=10
 CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=1
 
-CONFIG_PMW3610=y
-CONFIG_PMW3610_CPI=2000
-CONFIG_PMW3610_CPI_DIVIDOR=1
-CONFIG_PMW3610_ORIENTATION_90=y
-CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=100
-CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=200
-CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=250
-CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=500
-CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
-CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
+CONFIG_PMW3360=y
+CONFIG_PMW3360_CPI=2000
+CONFIG_PMW3360_CPI_DIVIDOR=1
+
+# CONFIG_PMW3360_ORIENTATION_90=y
+# CONFIG_PMW3360_REST1_SAMPLE_TIME_MS=100
+# CONFIG_PMW3360_REST2_SAMPLE_TIME_MS=200
+# CONFIG_PMW3360_RUN_DOWNSHIFT_TIME_MS=500
+# CONFIG_PMW3360_REST1_DOWNSHIFT_TIME_MS=5000
+# CONFIG_PMW3360_REST2_DOWNSHIFT_TIME_MS=30000
 
 ### Bluetooth ###
 # CONFIG_BT_PERIPHERAL_PREF_MAX_INT=9
@@ -58,7 +58,7 @@ CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_ZMK_LOG_LEVEL_INF=y
 CONFIG_BATTERY_LOG_LEVEL_DBG=y
-CONFIG_PMW3610_LOG_LEVEL_INF=y
+CONFIG_PMW3360_LOG_LEVEL_INF=y
 
 CONFIG_CONSOLE=y
 CONFIG_SERIAL=y
