--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -36,8 +36,8 @@ CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=1
 
 CONFIG_PMW3360=y
-CONFIG_PMW3360_CPI=2000
-CONFIG_PMW3360_CPI_DIVIDOR=1
+# CONFIG_PMW3360_CPI=2000
+# CONFIG_PMW3360_CPI_DIVIDOR=1
 
 # CONFIG_PMW3360_ORIENTATION_90=y
 # CONFIG_PMW3360_REST1_SAMPLE_TIME_MS=100
