--- a/config/boards/shields/desynchronized/desynchronized_left.conf
+++ b/config/boards/shields/desynchronized/desynchronized_left.conf
@@ -15,7 +15,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Keyboard Name
-CONFIG_ZMK_KEYBOARD_NAME="desynchronized"
+CONFIG_ZMK_KEYBOARD_NAME="temp"
 
 # Uncomment to enable encoder
 # CONFIG_EC11=y
